<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="button_true">True</string>
    <string name="button_false">False</string>
    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="action_settings">Settings</string>
    <string name="toast_correct">Correct!</string>
    <string name="toast_incorrect">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and Indian Ocean</string>
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="content_desc_button_prev">Button prev arrow</string>
    <string name="content_desc_button_next">Button next arrow</string>
    <string name="text_warning">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="button_cheat">Cheat!</string>
    <string name="toast_judgment">Cheating is wrong.</string>
    <string name="title_activity_cheat">CheatActivity</string>
    <string name="text_view_manufacturer">Manufacturer:</string>
    <string name="text_view_model">Model:</string>
    <string name="text_view_version">API version:</string>
    <string name="text_view_version_release">Version release:</string>

</resources>
