<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:context="ua.vlad.bignerdranchguide.CheatActivity">
    
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="24dp"
              android:text="@string/text_warning"/>
    
    <TextView android:id="@+id/text_view_answer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="24dp"
              tools:text="Answer"/>

    <Button android:id="@+id/button_show_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button"/>

    <TextView android:id="@+id/text_view_manufacturer"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingTop="24dp"
              android:paddingBottom="4dp"
              android:text="@string/text_view_manufacturer"
              tools:text="Manufacturer"/>

    <TextView android:id="@+id/text_view_model"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="4dp"
              android:text="@string/text_view_model"
              tools:text="Model"/>

    <TextView android:id="@+id/text_view_version"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="4dp"
              android:text="@string/text_view_version"
              tools:text="Version"/>

    <TextView android:id="@+id/text_view_version_release"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="4dp"
              android:text="@string/text_view_version_release"
              tools:text="Version release"/>

    
</LinearLayout>